# finpipe

./: .gitignore  .pre-commit-config.yaml  =0.2.2  README.md  main.py  pyproject.toml  pyrightconfig.json  scratch_finviz.py  sent_compressor.py  stocks_news.json  test_out.txt  test_out2.txt
docs/: api-reference.md  architecture-review.md  architecture.md  finpipe-eng-handbook.xml  finpipe-rules.xml  finpipe.settings.example.json  finpipe_architecture.md  rearchitecture-plan.md  session-handoff.md
scripts/: check_architecture_docs.py  ensure_typecheck_import_root.ps1  ensure_typecheck_import_root.py  ensure_typecheck_import_root.sh  run_checks.ps1  run_checks.sh  test_json_config.py  test_llm_cache.py  test_pipeline.py
src/: __init__.py  _version.py  client.py
src/_internal/: aimd.py  limits.py
src/catalog/: __init__.py  adapter_registry.py  handles.py  models.py  registry.py  service.py
src/core/: config.py  exceptions.py  interfaces.py  llm_compress.py  llm_prompt.py  llm_sanitize.py  models.py  registry.py  screener_parsers.py  settings_dump.py  types.py
src/health/: __init__.py  api.py  models.py  probes.py  registry.py  service.py
src/network/: cache.py  cache_manager.py  concurrency.py  http.py  limiter.py  resilience.py  sync_bridge.py
src/providers/: __init__.py  alpha_vantage.py  base.py  descriptor.py  fred.py  gemini.py  groq.py  llm_base.py  massive.py  nvidia.py  schwab.py  screener.py  sentiment.py  tradingview.py  yahoo.py
src/providers/composite/: __init__.py
tests/: conftest.py  test_client.py  test_coverage_95.py  test_coverage_edge.py  test_coverage_final.py  test_coverage_gaps.py  test_coverage_last_mile.py  test_coverage_push.py
tests/catalog/: test_catalog_models.py  test_catalog_service.py  test_handles.py
tests/core/: test_config.py  test_config_coverage.py  test_llm_compress.py  test_llm_prompt.py  test_llm_sanitize.py  test_registry.py  test_settings_dump.py
tests/health/: test_health_api.py  test_health_service.py  test_models.py  test_probes.py  test_service_extended.py
tests/integration/: conftest.py  test_live_gate.py  test_live_provider_probes.py
tests/network/: test_adaptive_limiter.py  test_cache.py  test_cache_manager.py  test_http_and_sync_bridge.py  test_limiter.py  test_resilience.py  test_resilience_missing.py
tests/providers/: test_alpha_vantage.py  test_base.py  test_composite.py  test_composite_extended.py  test_coverage_sentiment_extra.py  test_fred.py  test_llm.py  test_llm_base.py  test_llm_extended.py  test_massive.py  test_massive_extended.py  test_schwab.py  test_screener.py  test_screener_extended.py  test_sentiment.py  test_sentiment_coverage.py  test_sentiment_extended.py  test_tradingview.py  test_yahoo.py  test_yahoo_extended.py
v2/: README.md
v2/finpipe/: __init__.py  client.py
v2/finpipe/capabilities/: equity.py  intel.py  llm.py  macro.py  options.py  policy.py  screener.py
v2/finpipe/core/: config.py  errors.py  models.py  protocols.py  redact.py
v2/finpipe/observe/: catalog.py  describe.py  health.py  settings_dump.py
v2/finpipe/providers/: alpha_vantage.py  base.py  fred.py  manifest.py  massive.py  normalize.py  screener.py  sentiment.py  snapshots.py  wiring.py  yahoo.py
v2/finpipe/providers/llm/: base.py  gemini.py  openai_compat.py  sanitize.py
v2/finpipe/runtime/: cache.py  codec.py  paths.py  ratelimit.py  resilience.py  tokens.py  transport.py
v2/tests/: conftest.py  test_alpha_vantage.py  test_cache.py  test_codec.py  test_config_and_secrets.py  test_fred.py  test_llm.py  test_manifest_and_client.py  test_massive.py  test_policy.py  test_resilience.py  test_screener.py  test_sentiment.py  test_snapshots.py  test_yahoo.py
